fix banner z-index for inline style

--- a/assets/css/ui-style.css
+++ b/assets/css/ui-style.css
@@ -638,5 +638,5 @@ footer {
 }
 
 .OLSKBanner {
-	z-index: 4;
+	z-index: 4 !important;
 }
